# Silent-Face-Anti-Spoofing-APK

./: README.md  build.gradle
app/: build.gradle
app/src/main/java/com/mv/livebodyexample/: MainActivity.kt
engine/: build.gradle
engine/src/main/cpp/: CMakeLists.txt
engine/src/main/cpp/lib/arm64-v8a/cmake/ncnn/: ncnn.cmake
engine/src/main/cpp/lib/armeabi-v7a/cmake/ncnn/: ncnn-release.cmake
gradle/wrapper/: gradle-wrapper.properties
